<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="12dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/personal"
            android:textSize="24sp"
            android:textColor="@color/design_default_color_primary_dark"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etname"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/num"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etnum"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/email"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etemail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/country"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etcountry"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/address"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etaddress"
            android:lines="3"
            android:gravity="start"
            android:background="@drawable/multiline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/date"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btndob"
            android:text="@string/click"
            android:textColor="@color/cardview_dark_background"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/gen"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/rdogender"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rdomale"
                android:checked="true"
                android:text="@string/male"
                android:textColor="@color/cardview_dark_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/rdofemale"
                android:text="@string/female"
                android:layout_marginLeft="24dp"
                android:textColor="@color/cardview_dark_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <TextView
            android:text="@string/hobby"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/chkreading"
            android:text="@string/h1"
            android:textColor="@color/cardview_dark_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/chktravelling"
            android:text="@string/h2"
            android:textColor="@color/cardview_dark_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/chkmusic"
            android:text="@string/h3"
            android:textColor="@color/cardview_dark_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnnext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="12dp"
            android:background="@drawable/btn_bacg"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>