<resources>
    <string name="app_name">Assignment5</string>
    <string name="personal">Personal Details</string>

    <string name="name">Full Name</string>
    <string name="num">Phone Number</string>
    <string name="email">Email ID</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="date">Date of Birth</string>
    <string name="hobby">Hobbies</string>
    <string name="gen">Gender</string>

    <string name="click">Click Here</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="h1">Reading</string>
    <string name="h2">Travelling</string>
    <string name="h3">Music</string>
    <string name="signup">Sign up</string>
    <string name="sign">Click here to Sign up</string>

</resources>